<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/breakfast"
            android:orderInCategory="100"
            android:title="@string/breakfast"
            app:showAsAction="always"
            android:icon="@drawable/ic_action_name"
            />
        <item
            android:id="@+id/lunch"
            android:orderInCategory="10"
            android:title="@string/lunch"
            app:showAsAction="always"
            android:icon="@drawable/ic_lunch"
            />
        <item
            android:id="@+id/Dinner"
            android:orderInCategory="20"
            android:title="@string/dinner"
            app:showAsAction="always"
            android:icon="@drawable/ic_dinner"
            />
        <item
            android:id="@+id/meeting"
            android:orderInCategory="30"
            android:title="@string/meeting"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_meeting"
            />
    <item
        android:id="@+id/party"
        android:orderInCategory="30"
        android:title="@string/party"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_party"
        />
    </menu>
